--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: white;
+}
+html
+{
+  font-size: 1rem;
+}
+body
+{
+  background: #000000;
 }
