--- a/src/components/topBar/topBar.module.css
+++ b/src/components/topBar/topBar.module.css
@@ -1,7 +1,7 @@
 .topBar
 {
     width: 100%;
-    background-color: #000000;
+    background-color: #00000040;
     position: fixed;
     top:0;
     left:0;
@@ -11,10 +11,12 @@
     align-items: center;
     padding: .5rem 1rem;
     gap:1rem;
+    backdrop-filter: blur(10px);
+    z-index: 10;
 }
 .logo
 {
-    width:12rem;
+    width:8rem;
 }
 .langAndCurrency
 {
@@ -31,14 +33,14 @@
 }
 .iconSVG
 {
-    width: 1.4rem;
-    height: 1.4rem;
+    width: 1.2rem;
+    height: 1.2rem;
 }
 .listContainer
 {
     background-color: #404040;
     position: relative;
-    height: 2rem;
+    height: 1.6rem;
     width: 4rem;
     font-size: 1.2rem;
     display: flex;
@@ -53,7 +55,7 @@
 }
 .list
 {
-    top:2.2rem;
+    top:2rem;
     position: absolute;
     background-color: #404040;
     list-style-type: none;
@@ -90,14 +92,14 @@
     background: none;
     border-radius: .8rem;
     outline: none;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 700;
     cursor: pointer;
     transition: background .3s ease;
 }
 .line
 {
-    width: .25rem;
+    width: .2rem;
     height: 2.5rem;
     background-color: #00BFA6;
     border-radius: 10px;
@@ -105,8 +107,8 @@
 .register
 {
     background: none;
-    margin-left: 1rem;
-    border:.3rem solid #00BFA6;
+    margin-left: .7rem;
+    border:.2rem solid #00BFA6;
 }
 .register:hover
 {
@@ -115,7 +117,7 @@
 .login
 {
     background: #008b79;
-    border:.3rem solid #00BFA6;
+    border:.2rem solid #00BFA6;
 }
 .login:hover
 {
