--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -12,6 +12,11 @@
 {
     height: 100%;
     z-index: 1;
+    filter: contrast(1.3) brightness(0.0);
+    transition: filter 1.5s linear;
+}
+.bgDisplay
+{
     filter: contrast(1.3) brightness(0.6);
 }
 .h1
@@ -73,6 +78,8 @@
     backdrop-filter: blur(10px);
     cursor: pointer;
     transition: all .3s ease;
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 700;
 }
 .navUl>li::selection
 {
