--- a/src/components/topBar/topBar.module.css
+++ b/src/components/topBar/topBar.module.css
@@ -1,7 +1,7 @@
 .topBar
 {
     width: 100%;
-    background-color: #00000040;
+    background: #00000076;
     position: fixed;
     top:0;
     left:0;
@@ -13,10 +13,15 @@
     gap:1rem;
     backdrop-filter: blur(10px);
     z-index: 10;
+    transition: background 1s ease;
+}
+.topBarSolid
+{
+    background: #0E1116;
 }
 .logo
 {
-    width:8rem;
+    width:16rem;
     cursor: pointer;
     opacity: 0.85;
     transition: opacity .3s ease;
