--- a/src/components/assetsPages/pages.module.css
+++ b/src/components/assetsPages/pages.module.css
@@ -1,6 +1,6 @@
 .main
 {
     width: 100%;
-    padding: 3rem;
-    background-color: yellow;
+    padding: 0 2rem 2rem 2rem;
+    /* background-color: rgba(255, 255, 0, 0.531); */
 }
