--- a/src/components/assetsPages/nav/nav.module.css
+++ b/src/components/assetsPages/nav/nav.module.css
@@ -21,6 +21,10 @@
     color: #00BFA6;
     background:none !important;
 }
+.navSticked>.ul>.currentPage>.navIcon
+{
+    fill: #00BFA6;
+}
 .ul
 {
     list-style-type: none;
@@ -58,6 +62,7 @@
 {
     width: 1.5rem;
     height: 1.5rem;
+    fill: white;
 }
 .currentPage
 {
