--- a/src/components/assetsPages/pages.module.css
+++ b/src/components/assetsPages/pages.module.css
@@ -2,5 +2,5 @@
 {
     width: 100%;
     padding: 0 2rem 2rem 2rem;
-    background-color: rgba(255, 255, 0, 0.531);
+    /* background-color: rgba(255, 255, 0, 0.531); */
 }
