--- a/src/components/assetsPages/pageArticle/pageArticle.module.css
+++ b/src/components/assetsPages/pageArticle/pageArticle.module.css
@@ -8,26 +8,36 @@
     align-items: center;
     justify-content: center;
     padding: 3rem 0;
-
+    position: relative;
 }
 .error
 {
+    position: absolute;
+    top:50%;
+    left:50%;
+    translate: -50% -50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap:1rem;
-    width: 30%;
+    width: 40%;
+    padding: 3rem;
+    background:#404040a7;
+    backdrop-filter: blur(10px);
+    border-radius: 3rem;
+    z-index: 2;
+    border:.4rem solid #808080;
 }
 .errorIcon
 {
-    width: 5rem;
-    height: 5rem;
+    width: 10rem;
+    height: 10rem;
 }
 .error>h2
 {
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 .item
 {
