--- a/src/components/assetsPages/pageArticle/pageArticle.module.css
+++ b/src/components/assetsPages/pageArticle/pageArticle.module.css
@@ -71,6 +71,13 @@
     white-space: nowrap;    
     text-overflow: ellipsis;
 }
+.longName
+{
+    grid-column: 1/3;
+    font-size: 1.2rem;
+        text-overflow: clip;
+            white-space: wrap; 
+}
 .chart
 {
     height: 100%;
