--- a/src/components/assetsPages/pageLoading/pageLoading.module.css
+++ b/src/components/assetsPages/pageLoading/pageLoading.module.css
@@ -16,6 +16,10 @@
     border-radius: 1rem; 
     overflow: hidden;
 }
+.longContainer
+{
+    grid-column: 1/3;
+}
 .priceContainer
 {
     width: 100%;
