--- a/src/components/assetsPages/pageArticle/pageArticle.module.css
+++ b/src/components/assetsPages/pageArticle/pageArticle.module.css
@@ -62,7 +62,6 @@
 .img
 {
     width: 3rem;
-    height: 3rem;
 }
 .name
 {
@@ -75,8 +74,13 @@
 {
     grid-column: 1/3;
     font-size: 1.2rem;
-        text-overflow: clip;
-            white-space: wrap; 
+    text-overflow: clip;
+    white-space: wrap; 
+    font-weight: 700;
+}
+.currencyName
+{
+    font-weight: 700;
 }
 .chart
 {
